# Delitos_Informaticos

./: README.md  main.py  pyproject.toml  run_etl.sh
ingestion/: s3_ingestion.py  secop_extraction.py  snowflake_load.py
notebooks/: data_extraction.ipynb
snowflake_connection/: dbt_project.yml
snowflake_connection/models/gold/: delitos_por_departamento.sql  delitos_por_mes.sql  resumen_general.sql  tendencia_ciberdelitos.sql  top_municipios_delitos.sql
snowflake_connection/models/silver/: sources.yml  stg_delitos.sql  stg_delitos_categorizado.sql
